--- a/index.html
+++ b/index.html
@@ -5,25 +5,23 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Oi</title>
-  <link rel="stylesheet" href="node_modules/materialize-css/dist/css/materialize.min.css">
+  <link rel="stylesheet" href="node_modules/angular-material/angular-material.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="style/main.css">
 </head>
 
 <body>
-  <div class="container">
+  <md-content class="md-padding" layout="column">
     <ui-view></ui-view>
-  </div>
+  </md-content>
 </body>
 
-<script>
-  window.Hammer = require('hammerjs')
-</script>
-
 <script src="node_modules/angular/angular.min.js"></script>
+<script src="node_modules/angular-animate/angular-animate.min.js"></script>
+<script src="node_modules/angular-aria/angular-aria.min.js"></script>
+<script src="node_modules/angular-messages/angular-messages.min.js"></script>
+<script src="node_modules/angular-material/angular-material.min.js"></script>
 <script src="node_modules/angular-ui-router/release/angular-ui-router.min.js"></script>
-<script src="node_modules/jquery/dist/jquery.min.js"></script>
-<script src="node_modules/materialize-css/dist/js/materialize.js"></script>
 
 <script src="./src/app.js"></script>
 
